--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,16 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/RoyalBlue"
     tools:context="com.example.root.sudoku.MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@color/CornflowerBlue"
         android:layout_gravity="center"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp">
         <TextView
             android:text="@string/main_title"
             android:layout_width="wrap_content"
@@ -28,30 +31,23 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/continue_label"/>
+            android:text="@string/continue_label"
+            android:id="@+id/continue_button" />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/new_game_label"/>
+            android:text="@string/new_game_label"
+            android:id="@+id/new_game_button" />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/about_label"/>
+            android:text="@string/about_label"
+            android:id="@+id/about_button" />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/exit_label"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/about_label"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/exit_label"/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/about_label"/>
+            android:text="@string/exit_label"
+            android:id="@+id/exit_button" />
+
 </LinearLayout>
 </LinearLayout>
