button to open 2 diff activity added

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -35,7 +35,8 @@
                     android:text="@string/about_label"
                     android:id="@+id/about_button" />
                 <Button
-                    android:text="@string/exit_label"/>
+                    android:text="@string/exit_label"
+                    android:id="@+id/exit_button" />
             </TableRow>
 
         </TableLayout>
